--- a/linear_regression/linear_regression_example.ipynb
+++ b/linear_regression/linear_regression_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
     "plt.scatter(X[:,1], y, s=30, c='r', marker='x', linewidths=1)\n",
     "plt.xlim(4,24)\n",
     "plt.xlabel('Population of City in 10,000s')\n",
-    "plt.ylabel('Profit in $10,000s');"
+    "plt.ylabel('Profit in $10,000s')"
    ]
   },
   {
@@ -243,7 +243,7 @@
     "\n",
     "plt.plot(Cost_J)\n",
     "plt.ylabel('Cost J')\n",
-    "plt.xlabel('Iterations');"
+    "plt.xlabel('Iterations')"
    ]
   },
   {
@@ -315,7 +315,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
